# magic-hate-ball

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SECURITY.md  build-js.js  justfile  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: javascript.yml  mypy.yml  pylint.yml  pytest.yml
js/: draw-scene.ts  init-buffers.ts  main.ts  programinfo.ts
magic_hate_ball/: __init__.py  cli.py  responses.py
magic_hate_ball/static/css/: styles.css
magic_hate_ball/static/js/: draw-scene.js  init-buffers.js  main.js
magic_hate_ball/templates/: __init__.py  index.html
tests/: test_fastapi.py
